--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --text-color: #000000;
+  --text-color: #000;
   --header-color: rgb(190, 83, 83);
   --button-color: rgb(190, 83, 83);
   --box-shadow: black;
@@ -8,295 +8,284 @@
 
 /* similar items */
 
-*{
-    margin: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Montserrat', sans-serif;
-    background-color: rgb(235, 231, 226);
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: rgb(235, 231, 226);
 }
 
 .page-header {
-    display: flex;
-    width: 100%;
-    padding: 10px;
-    box-shadow: 1px 0.5px black;
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  box-shadow: 1px 0.5px black;
 }
 
 .page-header__items {
-    flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .page-header__items:last-child {
-    flex-grow: 1;
-    text-align: right;
+  flex-grow: 1;
+  text-align: right;
 }
 
 .nav-logo {
-    max-width: 100px;
-    max-height: 100px;
+  max-width: 100px;
+  max-height: 100px;
 }
 
-.links a{
-    list-style: none;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    text-shadow: 0.5px 0.5px rgb(255, 255, 255);
-    font-size: 17px;
+.links a {
+  list-style: none;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  text-shadow: 0.5px 0.5px rgb(255, 255, 255);
+  font-size: 17px;
 }
 
 .link-list {
-    list-style: none;
-    display: inline-block;
-    margin-left: 25px;
-    padding: 1em;
-    }
-
-.button, button {
-        margin-top: 2em;
-        border: none;
-        display: inline-block;
-        font-family: inherit;
-        background-color: rgb(190, 83, 83);
-        color: white;
-        text-decoration: none;
-        padding: 10px;
-        border-radius: 5px;
-        border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-        transition: 0.7s opacity;
-        width: 200px;
-    }
-    
-    button:hover,
-    button:focus,
-    .button:hover,
-    .button:focus {
-        cursor: pointer;
-        opacity: 0.8;
-    }
-    
-    .page-footer a{
-        text-decoration: none;
-    }
-    
-    .page-footer {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-    }
-    
-    .find-me {
-        position: relative;
-        text-align: left;
-        margin: 0em 3.7em 0.7em 0em;
-        font-weight: bold;  
-    }
-    
-    .icons {
-        width: 25%;
-        padding: 0em 1em;
-    }
-    
-/* Home */
-
-h1{
-    font-size: 50px;
-    color: rgb(190, 83, 83);
-    text-shadow: black 1px 2px;
-    text-align: center;
+  list-style: none;
+  display: inline-block;
+  margin-left: 25px;
+  padding: 1em;
 }
 
+.button,
+button {
+  margin-top: 2em;
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: rgb(190, 83, 83);
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  transition: 0.7s opacity;
+  width: 200px;
+}
+
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.page-footer a {
+  text-decoration: none;
+}
+
+.page-footer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.find-me {
+  position: relative;
+  text-align: left;
+
+  font-weight: bold;
+}
+
+.icons {
+  width: 25%;
+  padding: 0 1em;
+}
+
+/* Home */
+
+h1 {
+  font-size: 50px;
+  color: rgb(190, 83, 83);
+  text-shadow: black 1px 2px;
+  text-align: center;
+}
 
 .portrait {
-    float: left;
-    width: 250px;
-    margin-right: 40px;
-    float: left;
-    width: 250px;
-    margin-right: 40px;
-    border-radius: 50%;
-      
+  float: left;
+  width: 250px;
+  margin-right: 40px;
+  border-radius: 50%;
 }
 
 .profile {
-    max-width: 700px;
-    margin: 0 auto;
-    margin-top: 8em;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-top: 8em;
 }
 
-h1, .intro{
-    margin: 15px;
-    text-align: center;
+h1,
+.intro {
+  margin: 15px;
+  text-align: center;
 }
 
 .code {
-    margin: 0px 0em 2em 6em;
+  margin: 0 0 2em 6em;
 }
 
 .def-link {
-    color: black;
-    font-weight: bold;
+  color: black;
+  font-weight: bold;
 }
 
 .def-link:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .def-link:visited {
-    color: rgb(44, 1, 44);
+  color: rgb(44, 1, 44);
 }
 
 .def-link:active {
-    color: blueviolet;
+  color: blueviolet;
 }
 
-.def-link:hover, .def-link:focus {
-    text-decoration: none;
+.def-link:hover,
+.def-link:focus {
+  text-decoration: none;
 }
 
 /* contact */
 
-
 .container {
-    max-width: 700px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    margin-top: 5em;
+  max-width: 700px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-top: 5em;
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
 }
 
-
-.information p{
-    margin-bottom: 8px;
+.information p {
+  margin-bottom: 8px;
 }
-
-
 
 .standard-label {
-    display: inline-block;
-    padding-bottom: 10px;
-    
+  display: inline-block;
+  padding-bottom: 10px;
 }
 
 /* about */
 
 .about-block {
-    max-width: 100%;
-    margin: auto;
-    top: 20%;
-    left: 15%;
-    position: absolute;
-    text-align: center;
-    padding: 1em;
+  max-width: 100%;
+  margin: auto;
+  top: 20%;
+  left: 15%;
+  position: absolute;
+  text-align: center;
+  padding: 1em;
 }
 
-p{
-    margin-right: 1em;    
+p {
+  margin-right: 1em;
 }
 
 .list-dev {
-    list-style: none;
-    padding: 1em;
+  list-style: none;
+  padding: 1em;
 }
 
 .lists-dev {
-    padding: 5px;
+  padding: 5px;
 }
 
-
-.berlin-illustration{
-    position: absolute;
-    left: 50%;
-    top: 15%;
+.berlin-illustration {
+  position: absolute;
+  left: 50%;
+  top: 15%;
 }
 
 @keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76414;
-    }
+  0% {
+    fill: #edc655;
   }
 
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
+}
+
 .sun {
-    animation: 4s color-change infinite alternate linear;
+  animation: 4s color-change infinite alternate linear;
 }
 
 @keyframes cloud-move {
-    from {
-      transform: translate(0, 50px);
-    }
-    to {
-      transform: translate(200px, 50px);
-    }
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
 }
 
 .cloud-front {
-    animation: 30s cloud-move infinite alternate linear;
+  animation: 30s cloud-move infinite alternate linear;
 }
 
 @keyframes cloud-move-reverse {
-    from {
-      transform: translate(446px, 48px);
-    }
-    to {
-      transform: translate(100px, 48px);
-    }
+  from {
+    transform: translate(446px, 48px);
   }
+
+  to {
+    transform: translate(100px, 48px);
+  }
+}
 
 .cloud-back {
-    animation: 34s cloud-move-reverse infinite alternate linear;
-  }
-    
-  html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+  animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1em;
 }
 
 .grid__item:last-child {
-    grid-column: 3 / 3;
-    grid-row: 1 / 3;
-  }
+  grid-column: 3 / 3;
+  grid-row: 1 / 3;
+}
 
 .grid__item {
-    background-color: rgb(255, 255, 255);
-    border-radius: 5%;
-    border-style: groove;
-  }
-
-.grid__item:last-child {
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5%;
+  border-style: groove;
 }
 
 .works {
-    margin-top: 5em;
+  margin-top: 5em;
 }
