--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -52,7 +52,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .block {
-  margin-top: 2em;
+  margin-top: 3em;
   width: 164px;
   height: 50px;
   background-color: rgb(24, 24, 24);
@@ -71,7 +71,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .links {
-  padding: 0 1em;
+  padding: 1.3em 1em;
   margin-right: auto;
   transform: translateX(-300%);
   transition: transform 0.2s ease;
