--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -457,6 +457,21 @@ button:focus,
   width: 100%;
   height: auto;
   border-radius: 10px;
+  display: cover;
+}
+
+.imgItemMeet {
+  width: 100%;
+  height: 350px;
+  border-radius: 10px;
+  object-fit: contain;
+}
+
+.imgItemMobile {
+  width: 100%;
+  height: 350px;
+  border-radius: 10px;
+  object-fit: contain;
 }
 
 .works {
