--- a/CSS/style.production.css
+++ b/CSS/style.production.css
@@ -461,12 +461,12 @@ button:focus,
 }
 
 .imgItem {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  display: cover;
+  width: 100%;         /* The image will take up the full width of its container */
+  height: auto;        /* Maintain aspect ratio */
+  max-height: 600px;   /* Limit the image to a maximum height of 400px */
+  border-radius: 10px; /* Rounded corners */
+  object-fit: contain;   /* Ensure the image covers the container while maintaining aspect ratio */
 }
-
 .imgItemMeet {
   width: 100%;
   height: 350px;
